--- a/free/detail/regex101.html
+++ b/free/detail/regex101.html
@@ -91,14 +91,14 @@
             <!-- Navigation Links - Desktop -->
             <div class="hidden md:flex mx-4 items-center relative">
     <div class="relative w-64">
-        <input type="text" id="searchInput" placeholder="搜索开发资源..." class="w-full bg-gray-100 dark:bg-dark-hover border border-gray-200 dark:border-dark-border rounded-full py-2 pl-10 pr-4 focus:outline-none focus:ring-2 focus:ring-primary/50 transition-all">
+        <input type="text" id="searchInput" placeholder="Search ..." class="w-full bg-gray-100 dark:bg-dark-hover border border-gray-200 dark:border-dark-border rounded-full py-2 pl-10 pr-4 focus:outline-none focus:ring-2 focus:ring-primary/50 transition-all">
         <button id="searchBtn" class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-primary transition-colors">
             <i class="fa fa-search"></i>
         </button>
     </div>
     <!-- 搜索结果浮动容器 -->
-    <div id="floating-results" class="absolute z-50 mt-2 w-80 bg-white dark:bg-darker border border-gray-200 dark:border-dark-border rounded-lg shadow-lg overflow-hidden hidden">
-        <div id="searchResults" class="max-h-80 overflow-y-auto">
+    <div id="floating-results-demo" class="absolute z-50 mt-2 w-80 bg-white dark:bg-darker border border-gray-200 dark:border-dark-border rounded-lg shadow-lg overflow-hidden hidden">
+        <div id="searchResultsDemo" class="max-h-80 overflow-y-auto">
             <!-- 搜索结果将在这里动态生成 -->
         </div>
     </div>
@@ -137,7 +137,7 @@
             <!-- 移动端搜索框 (默认隐藏) -->
         <div class="md:hidden px-4 pb-3 hidden" id="mobileSearchContainer">
             <div class="relative w-full">
-                <input type="text" id="mobileSearchInput" placeholder="搜索开发资源..." class="w-full bg-gray-100 dark:bg-dark-hover border border-gray-200 dark:border-dark-border rounded-full py-2 pl-10 pr-4 focus:outline-none focus:ring-2 focus:ring-primary/50 transition-all">
+                <input type="text" id="mobileSearchInput" placeholder="Search ..." class="w-full bg-gray-100 dark:bg-dark-hover border border-gray-200 dark:border-dark-border rounded-full py-2 pl-10 pr-4 focus:outline-none focus:ring-2 focus:ring-primary/50 transition-all">
                 <button id="mobileSearchBtnAction" class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-primary transition-colors">
                     <i class="fa fa-search"></i>
                 </button>
