--- a/free/detail/algolia.html
+++ b/free/detail/algolia.html
@@ -152,7 +152,7 @@
             <!-- 移动端搜索框 (默认隐藏) -->
         <div class="md:hidden px-4 pb-3 hidden" id="mobileSearchContainer">
             <div class="relative w-full">
-                <input type="text" id="mobileSearchInput" placeholder="搜索开发资源..." class="w-full bg-gray-100 dark:bg-dark-hover border border-gray-200 dark:border-dark-border rounded-full py-2 pl-10 pr-4 focus:outline-none focus:ring-2 focus:ring-primary/50 transition-all">
+                <input type="text" id="mobileSearchInput" placeholder="Search ..." class="w-full bg-gray-100 dark:bg-dark-hover border border-gray-200 dark:border-dark-border rounded-full py-2 pl-10 pr-4 focus:outline-none focus:ring-2 focus:ring-primary/50 transition-all">
                 <button id="mobileSearchBtnAction" class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-primary transition-colors">
                     <i class="fa fa-search"></i>
                 </button>
