fix-lost-mainjs

--- a/free/detail/algolia.html
+++ b/free/detail/algolia.html
@@ -849,4 +849,6 @@
     </script>
 
 
-<script src="/search-function.js" defer=""></script></body></html>
+<script type="module" src="/main.js"></script>
+<script src="/search-function.js" defer=""></script>
+</body></html>
