--- a/free/detail/argocd.html
+++ b/free/detail/argocd.html
@@ -784,4 +784,5 @@
     </script>
 
 
+<script type="module" src="/main.js"></script>
 <script src="/search-function.js" defer=""></script></body></html>
