--- a/free/detail/index.html
+++ b/free/detail/index.html
@@ -935,5 +935,6 @@
         // Start data loading when page loads
         document.addEventListener('DOMContentLoaded', loadResources);
     </script>
+<script type="module" src="/main.js"></script>
 </body>
 </html>
