--- a/free/detail/qwik.html
+++ b/free/detail/qwik.html
@@ -1128,4 +1128,5 @@ npm run build</code>
         });
     </script>
 
+<script type="module" src="/main.js"></script>
 <script src="/search-function.js" defer=""></script></body></html>
