--- a/free/detail/typesense.html
+++ b/free/detail/typesense.html
@@ -1066,4 +1066,5 @@ docker run -p 8108:8108 -v/tmp/typesense-data:/data --name typesense typesense/t
     </script>
 
 
+<script type="module" src="/main.js"></script>
 </body></html>
