--- a/free/detail/angular.html
+++ b/free/detail/angular.html
@@ -1137,4 +1137,5 @@ ng build</code>
             }
             
             lastScrollY = window.scrollY;
+<script type="module" src="/main.js"></script>
         });</script><script src="/search-function.js" defer=""></script></body></html>
