--- a/free/detail/vitest.html
+++ b/free/detail/vitest.html
@@ -1126,4 +1126,6 @@
             initRadarChart();
         });
     </script>
-    
+    <script type="module" src="/main.js"></script>
+    </body>
+    </html>
