set up the search input field to automatically receive focus when the webpage loads, making it easy to continue typing search terms

--- a/free/index.html
+++ b/free/index.html
@@ -417,6 +417,9 @@
         // 添加搜索框键盘事件监听
         searchInput.addEventListener('keydown', handleSearchKeydown);
         
+        // Auto-focus the search input field when the page loads
+        searchInput.focus();
+        
       } catch (error) {
         categoriesNav.innerHTML = `
           <div class="p-4 text-center">
