auto-focus-input

--- a/free/index.html
+++ b/free/index.html
@@ -1047,7 +1047,8 @@
       
       const tool = filteredTools[selectedResultIndex];
       const toolLink = `/free/detail/${tool.file}`;
-      window.open(toolLink, '_blank');
+      // 修改为在当前窗口打开链接
+      window.location.href = toolLink;
     }
     
     // 处理搜索框的键盘事件
