--- a/free/detail/vue.html
+++ b/free/detail/vue.html
@@ -136,7 +136,7 @@
         <div class="container mx-auto text-sm">
             <a href="/" class="hover:text-primary transition-colors">Home</a>
             <span class="mx-2">/</span>
-            <a href="/free" class="hover:text-primary transition-colors">Resources</a>
+            <a href="/free" class="hover:text-primary transition-colors">Resources-88</a>
             <span class="mx-2">/</span>
             <a href="/free/detail/" class="hover:text-primary transition-colors">Resource List</a>
             <span class="mx-2">/</span>
