--- a/free/detail/vue.html
+++ b/free/detail/vue.html
@@ -105,7 +105,7 @@
                 <!-- Navigation Icons -->
                 <div class="flex items-center space-x-4">
                     <button id="themeToggle" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors">
-                        <i class="fa-solid fa-sun text-yellow-500 dark:hidden"></i>
+                        <i class="fa-solid fa-crow text-yellow-500 dark:hidden"></i>
                         <i class="fa-solid fa-moon text-blue-300 hidden dark:block"></i>
                     </button>
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors">
@@ -136,9 +136,9 @@
         <div class="container mx-auto text-sm">
             <a href="/" class="hover:text-primary transition-colors">Home</a>
             <span class="mx-2">/</span>
-            <a href="/free" class="hover:text-primary transition-colors">Resources-88</a>
-            <span class="mx-2">/</span>
-            <a href="/free/detail/" class="hover:text-primary transition-colors">Resource List</a>
+            <a href="/free" class="hover:text-primary transition-colors">Resources</a>
+            <span class="mx-2 hidden md:inline">/</span>
+            <a href="/free/detail/" class="hover:text-primary transition-colors hidden md:inline">Resource List</a>
             <span class="mx-2">/</span>
             <span class="text-gray-600 dark:text-gray-400">Vue.js Fun</span>
         </div>
