--- a/free/index.html
+++ b/free/index.html
@@ -169,7 +169,7 @@
   </header>
 
   <!-- 主要内容区 -->
-  <main class="flex-1 flex flex-col md:flex-row">
+  <main class="flex-1 flex flex-col md:flex-row max-w-7xl mx-auto">
     <!-- Sidebar: Category navigation -->
     <aside class="hidden md:block bg-white dark:bg-dark-card w-full md:w-56 border-r border-light-border dark:border-dark-border p-3 transition-colors duration-300">
       <div class="p-2 border-b border-light-border dark:border-dark-border mb-2">
