--- a/free/index.html
+++ b/free/index.html
@@ -687,8 +687,9 @@
           return false;
         }
         
-        // 匹配工具名称或标签
+        // 匹配工具名称、分类或标签
         return tool.name.toLowerCase().includes(searchTermValue) ||
+               tool.category.toLowerCase().includes(searchTermValue) ||
                tool.tags.some(tag => tag.toLowerCase().includes(searchTermValue));
       });
       
