--- a/free/detail/prometheus.html
+++ b/free/detail/prometheus.html
@@ -1075,5 +1075,6 @@
         // Run typing animation when page loads
         window.addEventListener('load', typingEffect);
     </script>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
