--- a/free/index.html
+++ b/free/index.html
@@ -51,7 +51,9 @@
         @apply bg-primary/10 border-primary font-medium shadow-sm;
       }
       /* 其他工具类保持不变 */
-      .tag-item { /* 保持不变 */ }
+      .tag-item {
+        @apply px-2 py-1 bg-primary/10 text-primary rounded-md text-xs cursor-pointer transition-all duration-200 hover:bg-primary/20 hover:scale-105;
+      }
       .sortable-header { /* 保持不变 */ }
       .sort-indicator { /* 保持不变 */ }
       .table-row-hover {
@@ -147,31 +149,12 @@
     </div>
   </div>
 
-  <!-- Hero Section -->
-  <header class="bg-gradient-to-r from-primary/90 to-primary/70 shadow-md border-b border-primary/20">
-    <div class="container mx-auto px-4 py-6">
-      <div class="flex flex-col items-center text-center relative">
-        <!-- 添加装饰性元素 -->
-        <div class="absolute top-0 right-0 w-32 h-32 bg-white/10 rounded-full -mr-16 -mt-16 blur-2xl"></div>
-        <div class="absolute bottom-0 left-0 w-24 h-24 bg-white/10 rounded-full -ml-12 -mb-12 blur-xl"></div>
-        
-        <h1 class="text-2xl md:text-3xl font-bold text-white mb-2 relative z-10">Dev Tools Catalog</h1>
-        <p class="text-blue-100 max-w-lg mb-4 relative z-10">
-          A comprehensive collection of modern developer tools, frameworks, and resources.
-        </p>
-        <!-- 添加简单的统计数据，增强信息密度 -->
-        <div class="flex space-x-6 text-white/80 text-sm">
-          <div class="flex items-center"><i class="fa fa-puzzle-piece mr-1"></i> 1000+ Tools</div>
-          <div class="flex items-center"><i class="fa fa-th-large mr-1"></i> 30+ Categories</div>
-        </div>
-      </div>
-    </div>
-  </header>
+ 
 
   <!-- 主要内容区 -->
-  <main class="flex-1 flex flex-col md:flex-row max-w-7xl mx-auto">
+  <main class="flex-1 flex flex-col md:flex-row max-w-7xl mx-auto p-8">
     <!-- Sidebar: Category navigation -->
-    <aside class="hidden md:block bg-white dark:bg-dark-card w-full md:w-56 border-r border-light-border dark:border-dark-border p-3 transition-colors duration-300">
+    <aside class="hidden md:block bg-white dark:bg-dark-card w-full md:w-56 border-r border-light-border dark:border-dark-border p-3 rounded-lg transition-colors duration-300">
       <div class="p-2 border-b border-light-border dark:border-dark-border mb-2">
         <h2 class="font-bold text-gray-800 dark:text-gray-200 text-sm">Categories</h2>
         <p class="text-xs text-gray-500 dark:text-gray-400 mt-1" id="category-count">0 categories</p>
