--- a/search.html
+++ b/search.html
@@ -76,7 +76,7 @@
                     <i class="fa fa-moon text-accent hidden dark:block"></i>
                 </button>
                 <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">
-                    <i class="fa fa-star-o text-primary dark:text-primary"></i>
+                    <i class="fa fa-star text-primary dark:text-primary"></i>
                 </button>
                 <button id="shareBtn" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">
                     <i class="fa fa-share-alt text-secondary dark:text-secondary"></i>
